20090627 display.c: mark pentagon_16c_get_colour as inline and static (Fred).
20090706 machines/pentagon1024.c: initialise memory port before doing
         periph_update as that triggers a memory map call (Fred).
20090707 AUTHORS: Add Shay Green (Fred).
20090707 ChangeLog: chuck in a few entries as we go, mostly OS X port visible
         items at the moment (Fred).
20090710 disk/{fdd.c,wd_fdc.c}: save disk selected status over reset and
         reset motor or head when resetting WD FDC to fix Mr Gluck ROM handling
         on reset with a disk present (patch #2819220) (Gergely Szasz).
20090730 AUTHORS,ChangeLog,README,
         disk/{Makefile.am,beta.c,disk.c,opus.[ch],plusd.c,wd_fdc.[ch]},fuse.c,
         machines/{spec128.c,spec16.c,spec48.c,spec_se.c,specplus2.c,tc2048.c},
         man/fuse.1,memory.c,menu.[ch],menu_data.dat,periph.[ch],
         roms/Makefile.am,roms/opus.rom,settings.dat,tape.c,ui.c,ui/options.dat,
         ui/sdl/sdldisplay.c,ui/ui.h,utils.c,z80/coretest.c,z80/z80_checks.h,
         z80/z80_ops.c: add Opus Discovery support (patch #2823760) (Gergely
         Szasz and Fredrick Meunier).
20090731 disk/disk.c: tweak sector padding to fix ATC+Techonicn Ted.dsk Opus
         disk (thanks, Simon Owen) (Gergely Szasz).
20090803 man/fuse.1: tweak some details in the Opus and +D sections (Fred).
20090813 compat/wii/paths.c: Wii: Modified compat_is_absolute_path function to
	 recognize 'sd:/' prefix (Marek).
20090830 settings-header.pl,settings.pl: Minor correction to the perl code that
	 was creating duplicate 'Copyright (c)' string in generated c files.
	 (Marek).
20090830 fuse.c,ui/wii/wiidisplay.c: Wii: Moved filesystem init to main() where
	 it belongs (Marek).
20090830 utils.c,fuse.c,compat.h,disk/disk.c,input.c,README,settings.pl
	 ui/widget/{menu.c,filesel.c}: Wii: Use GEKKO macro instead of UI_WII
	 for non-UI code that needs to be compiled when compiling for Wii. This
	 will allow to compile Fuse for Wii either native or SDL UI (Marek).
