@@ -38,7 +38,7 @@ print Fuse::GPL( 'options.rc: options dialog boxes',
 /* This file is autogenerated from options.dat by options-resource.pl.
    Do not edit unless you know what you\'re doing! */
 
-#include "options.h"
+#include "options_internals.h"
 CODE
 
 foreach( @dialogs ) {
@@ -61,7 +61,7 @@ foreach( @dialogs ) {
 		$optname, uc( $widget->{value} );
 	    $y += 12;
 	} elsif( $widget->{type} eq "Combo" ) {
-	    ;	/* not implemented yet */
+	    ;	# FIXME: implement
 	} else {
 	    die "Unknown type '$widget->{type}'";
 	}
